--- a/pagina12.html
+++ b/pagina12.html
@@ -103,7 +103,7 @@
       </style>
 </head>
 <body>
-    <img src="img/1.png">
-    <img src="img/2.png">
+    <img src="1.png">
+    <img src="2.png">
 </body>
 </html>
